# Wordle-Romana

./: .gitignore  Analyzer.cpp  Analyzer.h  CMakeLists.txt  LICENSE.md  README.md  TODO.txt  WordleDict.cpp  WordleDict.h  WordleGame.cpp  WordleGame.h  WordlePlayer.cpp  WordlePlayer.h  best_first_guess.txt  first_guess.txt  first_guess_entropy.txt  main.cpp  main_Game.cpp  second_guess_cache.txt  stats.txt
Release/: WordlePlayer
analyzer/: Analyzer.cpp  Analyzer.h  analyzer.cpp  analyzer.h  main.cpp
common/: Pattern.h  WordData.h  WordleDict.cpp  WordleDict.h  entropy.cpp  entropy.h  patterns.cpp  patterns.h  word_data.h  word_dict.cpp  word_dict.h  wordle.cpp  wordle.h  wordle_dict.cpp  wordle_dict.h
data/: solutii.txt  stats.txt
first_guess_analyzer/: analyzer.cpp  main.cpp
game/: WordleGame.h  main.cpp  wordle_game.cpp  wordle_game.h
player/: WordlePlayer.cpp  WordlePlayer.h  main.cpp  wordle_player.cpp  wordle_player.h
release/: WordleGame  WordlePlayer  cuvinte.txt
release_asm/: ASM_WordleGame  ASM_WordlePlayer
src/_common/: entropy.cpp  entropy.h  ipc.h  paths.h  patterns.cpp  patterns.h  word_data.h  word_dict.cpp  word_dict.h
src/first_guess_analyzer/: main.cpp
src/game/: main.cpp  wordle_game.cpp
src/player/: main.cpp  wordle_player.cpp
src/second_guess_analyzer/: main.cpp
src/statistics_generator/: main.cpp
src/wordle_game/: main.cpp  wordle_game.cpp  wordle_game.h
src/wordle_player/: main.cpp  wordle_player.cpp  wordle_player.h
src_asm/_common/: entropy.s  paths.s  patterns.s  word_dict.s
src_asm/_common/callext/: exit.s  getrandom.s  open.s  read.s  write.s
src_asm/_common/syscall/: access.s  exit.s  getrandom.s  open.s  read.s  unlink.s  write.s
src_asm/_common/utils/: math.s  string.s
src_asm/wordle_game/: main.s  wordle_game.s
src_asm/wordle_player/: main.s  wordle_player.s
